==> linab309/git-stage/v1000_mass/Projects/Mass_Storage/src/HARDWARE/BMP/myiic.c <==
#include "myiic.h"
#include "delay.h"
//////////////////////////////////////////////////////////////////////////////////	 
//本程序只供学习使用，未经作者许可，不得用于其它任何用途
//Mini STM32开发板
//IIC 驱动函数	   
//正点原子@ALIENTEK
//技术论坛:www.openedv.com
//修改日期:2010/6/10 
//版本：V1.0
//版权所有，盗版必究。
//Copyright(C) 正点原子 2009-2019
//All rights reserved
////////////////////////////////////////////////////////////////////////////////// 	  

//初始化IIC
void IIC_Init(void)
{					     
 GPIO_InitTypeDef  GPIO_InitStructure;

//RCC->APB2ENR|=1<<4;//先使能外设IO PORTC时钟 							 
//	GPIOC->CRH&=0XFFF00FFF;//PC11/12 推挽输出
//	GPIOC->CRH|=0X00033000;	   
//	GPIOC->ODR|=3<<11;     //PC11,12 输出高
RCC_AHBPeriphClockCmd(RCC_AHBPeriph_GPIOB,ENABLE);

 GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;				 //SDA-->PC.4 端口配置
 GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT; 		 //推挽输出
 GPIO_InitStructure.GPIO_OType = GPIO_OType_PP; 		 //推挽输出
 GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;
 GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
 GPIO_Init(GPIOB, &GPIO_InitStructure);
 GPIO_SetBits(GPIOB,GPIO_Pin_8);						 //PA.8 输出高

GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;	    		 //LED1-->PD.2 端口配置
GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT; 		 //推挽输出
GPIO_InitStructure.GPIO_OType = GPIO_OType_PP; 		 //推挽输出
GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;
GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
GPIO_Init(GPIOB, &GPIO_InitStructure);	
GPIO_SetBits(GPIOB,GPIO_Pin_9); 						 //PD.2 输出高 

//	GPIOC->CRL&=0XFF0FFF0F;//PC4/5 推挽输出
//	GPIOC->CRL|=0X00300030;	   
//	GPIOC->ODR|=1<<5;     //PC4,4 输出高
//	GPIOC->ODR|=1<<1;     //PC4,4 输出高
}
//产生IIC起始信号


//IO方向设置
void SDA_IN(void) 
{
//GPIOC->MODE&=0XFFFFFF0F;GPIOC->CRL|=2<<4;
GPIO_InitTypeDef  GPIO_InitStructure;
 GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;				 //SDA-->PC.4 端口配置
 GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN; 		 //推挽输出
// GPIO_InitStructure.GPIO_OType = GPIO_OType_PP; 		 //推挽输出
 GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;
 GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
 GPIO_Init(GPIOB, &GPIO_InitStructure);
}
void SDA_OUT(void) 
{
GPIO_InitTypeDef  GPIO_InitStructure;
 GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;				 //SDA-->PC.4 端口配置
 GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT; 		 //推挽输出
 GPIO_InitStructure.GPIO_OType = GPIO_OType_PP; 		 //推挽输出
 GPIO_InitStructure.GPIO_Speed = GPIO_Speed_40MHz;
 GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
 GPIO_Init(GPIOB, &GPIO_InitStructure);
}

void IIC_Start(void)
{
	SDA_OUT();     //sda线输出
	IIC_SDA=1;	  	  
	IIC_SCL=1;
	delay_us(5);
 	IIC_SDA=0;//START:when CLK is high,DATA change form high to low 
	delay_us(5);
	IIC_SCL=0;//钳住I2C总线，准备发送或接收数据 
}	  
//产生IIC停止信号
void IIC_Stop(void)
{
	SDA_OUT();//sda线输出
	//IIC_SCL=0;
	IIC_SDA=0;//STOP:when CLK is high DATA change form low to high
 	//delay_us(5);
	IIC_SCL=1; 
	delay_us(5);
	IIC_SDA=1;//发送I2C总线结束信号
	delay_us(5);							   	
}
//等待应答信号到来
//返回值：1，接收应答失败
//        0，接收应答成功
u8 IIC_Wait_Ack(void)
{
	u8 ucErrTime=0;
	SDA_IN();      //SDA设置为输入  
	IIC_SDA=1;delay_us(5);	   
	IIC_SCL=1;delay_us(5);	 
	while(READ_SDA)
	{
		ucErrTime++;
		if(ucErrTime>250)
		{
			IIC_Stop();
			return 1;
		}
	}
	IIC_SCL=0;//时钟输出0 	   
	return 0;  
} 
//产生ACK应答
void IIC_Ack(void)
{
	IIC_SCL=0;
	SDA_OUT();
	IIC_SDA=0;
	delay_us(5);
	IIC_SCL=1;
	delay_us(5);
	IIC_SCL=0;
}
//不产生ACK应答		    
void IIC_NAck(void)
{
	IIC_SCL=0;
	SDA_OUT();
	IIC_SDA=1;
	delay_us(2);
	IIC_SCL=1;
	delay_us(2);
	IIC_SCL=0;
}					 				     
//IIC发送一个字节
//返回从机有无应答
//1，有应答
//0，无应答			  
void IIC_Send_Byte(u8 txd)
{                        
    u8 t;   
	SDA_OUT(); 	    
    IIC_SCL=0;//拉低时钟开始数据传输
    for(t=0;t<8;t++)
    {              
        IIC_SDA=(txd&0x80)>>7;
        txd<<=1; 	  
		delay_us(2);   //对TEA5767这三个延时都是必须的
		IIC_SCL=1;
		delay_us(5); 
		IIC_SCL=0;	
		delay_us(5);
    }	 
} 	    
//读1个字节，ack=1时，发送ACK，ack=0，发送nACK   
u8 IIC_Read_Byte(void)
{
	unsigned char i,receive=0;
	SDA_OUT();//SDA设置为输入
	IIC_SDA = 1;
    for(i=0;i<8;i++ )
	{
        receive<<=1;
		IIC_SCL=1;
        delay_us(5);
	    SDA_IN();//SDA设置为输入
        if(READ_SDA)receive++;   
        IIC_SCL=0; 
        delay_us(5);
    }
	#if 0
    if (!ack)
        IIC_NAck();//发送nACK
    else
        IIC_Ack(); //发送ACK   
	#endif
    return receive;
}
